WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238165
[WebGPU] Allocating a buffer of size 0 crashes
https://bugs.webkit.org/show_bug.cgi?id=238165
Summary
[WebGPU] Allocating a buffer of size 0 crashes
Myles C. Maxfield
Reported
2022-03-21 16:23:48 PDT
[WebGPU] Allocating a buffer of size 0 crashes
Attachments
Patch
(7.91 KB, patch)
2022-03-21 16:31 PDT
,
Myles C. Maxfield
kkinnunen
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2022-03-21 16:31:56 PDT
Created
attachment 455297
[details]
Patch
EWS
Comment 2
2022-03-22 12:11:25 PDT
Tools/Scripts/svn-apply failed to apply
attachment 455297
[details]
to trunk. Please resolve the conflicts and upload a new patch.
Myles C. Maxfield
Comment 3
2022-03-22 14:11:50 PDT
Committed
r291701
(
248742@trunk
): <
https://commits.webkit.org/248742@trunk
>
Radar WebKit Bug Importer
Comment 4
2022-03-22 14:12:15 PDT
<
rdar://problem/90658365
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug